Add code to demonstrate websocket handling

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,4 +7,5 @@ clojure-component:
   nrepl-port: 8190
   nrepl-start: true
   root-path: /clojure
+  ws-path: /web-socket
   app-init-symbol: org.msync.spring-clj.core/main
