Change app-init-symbol to init-symbol

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,4 +8,4 @@ clojure-component:
   nrepl-start: true
   root-path: /clojure
   ws-path: /web-socket
-  app-init-symbol: org.msync.spring-clj.core/main
+  init-symbol: org.msync.spring-clj.core/main
