Some refinements, and added examples.
Also, gradle script changes to address certain warnings about
unpredictable build order

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   main:
     banner-mode: console
-    log-startup-info: off
+    log-startup-info: on
 
 clojure-component:
   nrepl-port: 8190
